--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="/qr-code-component-main/images/favicon-32x32.png">
-  <link rel="stylesheet" href="/qr-code-component-main/Style/Style.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="stylesheet" href="Style/Style.css">
   <title>Frontend Mentor | QR code component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,7 +15,7 @@
   <main>
   <div class="content">
     <img
-      src="/qr-code-component-main/images/image-qr-code.png"
+      src="image-qr-code.png"
       alt="A QR code leading to the Frontend Mentor website"
     />
     <h1>Improve your front-end skills by building projects</h1>
